# libmetal

./: .travis.yml
cmake/: options.cmake
lib/: CMakeLists.txt  config.h  init.c  irq.h  log.c  log.h  spinlock.h  sys.h
lib/system/freertos/: init.c  irq.c  irq.h
lib/system/generic/: init.c  irq.c  irq.h  sys.h
lib/system/linux/: device.c  init.c  irq.c  irq.h
lib/system/zephyr/: CMakeLists.txt  init.c  irq.c  irq.h  log.c  log.h  sys.h
test/: metal-test.c  metal-test.h
test/system/freertos/: CMakeLists.txt
test/system/generic/: CMakeLists.txt
test/system/linux/: CMakeLists.txt
test/system/zephyr/: irq.c  main.c
